Reetan.Nayak Dev 25/force-app/main/default/objects/UB_AccountPlan__c/UB_AccountPlan__c.object-meta.xml
<CustomObject>
    <label>AccountPlan</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AccountPlans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>