Reetan.Nayak Dev 25/force-app/main/default/objects/UB_AccountPlan__c/fields/Account_Plan_Lead__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Plan Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AccountPlans</relationshipName>
    <type>Lookup</type>
</CustomField>