Reetan.Nayak Dev 25/force-app/main/default/objects/UB_AccountPlan__c/fields/Key_Contact__c.field-meta.xml
<CustomField>
    <fullName>Key_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Key Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>AccountPlans</relationshipLabel>
    <relationshipName>AccountPlans</relationshipName>
    <type>Lookup</type>
</CustomField>