Reetan.Nayak Dev 25/force-app/main/default/objects/UB_AccountPlan__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunity</label>
    <length>50</length>
    <type>Text</type>
</CustomField>