Reetan.Nayak Dev 25/force-app/main/default/objects/UB_AccountPlan__c/fields/Q1_Objectives__c.field-meta.xml
<CustomField>
    <fullName>Q1_Objectives__c</fullName>
    <label>Q1 Objectives</label>
    <length>50</length>
    <type>Text</type>
</CustomField>