Reetan.Nayak Dev 25/force-app/main/default/objects/UB_AccountPlan__c/fields/Q3_Action_Items__c.field-meta.xml
<CustomField>
    <fullName>Q3_Action_Items__c</fullName>
    <label>Q3 Action Items</label>
    <length>50</length>
    <type>Text</type>
</CustomField>