Reetan.Nayak Dev 25/force-app/main/default/objects/UB_AccountPlan__c/fields/Threats__c.field-meta.xml
<CustomField>
    <fullName>Threats__c</fullName>
    <label>Threats</label>
    <length>50</length>
    <type>Text</type>
</CustomField>