Reetan.Nayak Dev 25/force-app/main/default/objects/UB_AccountPlan__c/fields/Timeline__c.field-meta.xml
<CustomField>
    <fullName>Timeline__c</fullName>
    <label>Timeline</label>
    <length>50</length>
    <type>Text</type>
</CustomField>