Reetan.Nayak Dev 25/force-app/main/default/objects/UB_AccountPlan__c/fields/UB_Calander_Year__c.field-meta.xml
<CustomField>
    <fullName>UB_Calander_Year__c</fullName>
    <label>Calendar Year</label>
    <length>18</length>
    <type>Text</type>
</CustomField>