Reetan.Nayak Dev 25/force-app/main/default/objects/UB_AccountPlan__c/fields/UB_Core_Action_Plan__c.field-meta.xml
<CustomField>
    <fullName>UB_Core_Action_Plan__c</fullName>
    <label>Core Action Plan</label>
    <length>50</length>
    <type>Text</type>
</CustomField>