Reetan.Nayak Dev 25/force-app/main/default/objects/UB_AccountPlan__c/fields/UB_Object_Plan__c.field-meta.xml
<CustomField>
    <fullName>UB_Object_Plan__c</fullName>
    <label>Objective Of Plan</label>
    <length>100</length>
    <type>Text</type>
</CustomField>