Reetan.Nayak Dev 25/force-app/main/default/objects/UB_AccountPlan__c/fields/UB_Outlet__c.field-meta.xml
<CustomField>
    <fullName>UB_Outlet__c</fullName>
    <label>Outlet</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>AccountPlans</relationshipLabel>
    <relationshipName>AccountPlans</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>