Reetan.Nayak Dev 25/force-app/main/default/objects/UB_AccountPlan__c/fields/Weakness__c.field-meta.xml
<CustomField>
    <fullName>Weakness__c</fullName>
    <label>Weakness</label>
    <length>50</length>
    <type>Text</type>
</CustomField>