Reetan.Nayak Dev 25/force-app/main/default/objects/UB_AccountPlan__c/fields/Yearly_Objective__c.field-meta.xml
<CustomField>
    <fullName>Yearly_Objective__c</fullName>
    <label>Yearly Objective</label>
    <length>50</length>
    <type>Text</type>
</CustomField>