Reetan.Nayak Dev 25/force-app/main/default/objects/UB_AccountPlan__c/recordTypes/UB_AccountPlan.recordType-meta.xml
<RecordType>
    <fullName>UB_AccountPlan</fullName>
    <active>true</active>
    <label>UB AccountPlan</label>
</RecordType>